--- a/templates/partials/_scripts.hbs
+++ b/templates/partials/_scripts.hbs
@@ -7,4 +7,8 @@
 <script src="https://code.highcharts.com/highcharts.js"></script>
 
 {{!-- Post load scripts --}}
-<script src="/public/js/_charts-Analysis.js"></script>
+    {{!-- Analysis charts --}}
+<script src="/public/js/_charts_Analysis_ActivelyIll.js"></script>
+<script src="/public/js/_charts_Analysis_SeverlyIll.js"></script>
+<script src="/public/js/_charts_Analysis_DailyConfirmed.js"></script>
+<script src="/public/js/_charts_Analysis_ChartsHandler.js"></script>
