--- a/scss/base/_themes.scss
+++ b/scss/base/_themes.scss
@@ -17,6 +17,9 @@
     --chart-menu-arrow-color: invert(68%) sepia(12%) saturate(534%) hue-rotate(182deg) brightness(89%) contrast(85%);
     --chart-menu-button-background-color: #e6f1f4;
     --chart-tooltip-background-color: #ffffff;
+    --chart-line-color-0: #50cbfd;
+    --chart-line-color-1: #b6ca51;
+    --chart-line-color-2: #237d7d;
     //data-card
     --data-card-text-color: #222b45;
 }
@@ -40,6 +43,9 @@
     --chart-menu-arrow-color: invert(68%) sepia(12%) saturate(534%) hue-rotate(182deg) brightness(89%) contrast(85%);
     --chart-menu-button-background-color: #2a3b47;
     --chart-tooltip-background-color: #21303b;
+    --chart-line-color-0: #30e7f0;
+    --chart-line-color-1: #fd8264;
+    --chart-line-color-2: #90ed7d;
     //data-card
     --data-card-text-color: #fff;
 }
