--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,9 @@
   --chart-menu-arrow-color: invert(68%) sepia(12%) saturate(534%) hue-rotate(182deg) brightness(89%) contrast(85%);
   --chart-menu-button-background-color: #e6f1f4;
   --chart-tooltip-background-color: #ffffff;
+  --chart-line-color-0: #50cbfd;
+  --chart-line-color-1: #b6ca51;
+  --chart-line-color-2: #237d7d;
   --data-card-text-color: #222b45;
 }
 
@@ -35,6 +38,9 @@
   --chart-menu-arrow-color: invert(68%) sepia(12%) saturate(534%) hue-rotate(182deg) brightness(89%) contrast(85%);
   --chart-menu-button-background-color: #2a3b47;
   --chart-tooltip-background-color: #21303b;
+  --chart-line-color-0: #30e7f0;
+  --chart-line-color-1: #fd8264;
+  --chart-line-color-2: #90ed7d;
   --data-card-text-color: #fff;
 }
 
@@ -117,28 +123,33 @@ body {
 .highcharts-axis-title {
   fill: var(--chart-text-color);
   white-space: normal !important;
+  font-family: var(--text-font-family);
+  text-align: right;
+  font-size: 0.9rem;
+  font-weight: 400;
+  line-height: 1;
 }
 
 .highcharts-axis-labels {
   fill: var(--chart-text-color);
   cursor: default;
-  font-size: 0.9em;
+  font-size: 0.8rem;
   font-family: var(--text-font-family);
 }
 
 .highcharts-color-0 {
-  fill: #90ed7d;
-  stroke: #90ed7d;
+  fill: var(--chart-line-color-0);
+  stroke: var(--chart-line-color-0);
 }
 
 .highcharts-color-1 {
-  fill: #fd8264;
-  stroke: #fd8264;
+  fill: var(--chart-line-color-1);
+  stroke: var(--chart-line-color-1);
 }
 
 .highcharts-color-2 {
-  fill: #7cb5ec;
-  stroke: #7cb5ec;
+  fill: var(--chart-line-color-2);
+  stroke: var(--chart-line-color-2);
 }
 
 .highcharts-tooltip {
@@ -150,15 +161,35 @@ body {
   fill: var(--chart-tooltip-background-color);
   fill-opacity: 1;
   stroke-width: 0;
+  z-index: 50;
+}
+
+.highcharts-legend-item {
+  pointer-events: none;
 }
 
 .highcharts-legend-item > text {
   fill: var(--chart-text-color);
   font-weight: 600;
-  font-size: 1em;
+  font-size: 0.8rem;
   font-family: "Open Sans", sans-serif;
   cursor: pointer;
   stroke-width: 0;
+}
+
+.highcharts-legend-item .highcharts-graph {
+  display: none;
+}
+
+.highcharts-legend-item .highcharts-point {
+  transform: scale(1.3) translate(-2.5px, -2.5px);
+}
+
+.highcharts-crosshair-category {
+  stroke-opacity: 0.5;
+  stroke-width: 1.5px;
+  stroke: var(--chart-text-color);
+  transform: translateY(2px);
 }
 
 .navbar-info {
@@ -382,7 +413,7 @@ body {
   right: 30px;
   top: 50px;
   width: 200px;
-  z-index: 1;
+  z-index: 3;
   font-size: 0.7rem;
   transition: all 200ms 0ms;
   box-shadow: 0 6px 15px 0 rgba(0, 0, 0, 0.6);
@@ -675,17 +706,25 @@ body {
   flex-basis: 0;
   min-width: 200px;
 }
-@media (max-width: 770px) {
+@media (max-width: 800px) {
   #analysis .section__content .inline-flex-wrapper {
     flex-direction: column;
   }
+  #analysis .section__content .inline-flex-wrapper .card {
+    width: 100%;
+  }
 }
-#analysis .section__content .card-content .chart-menu {
+#analysis .section__content .card-header {
+  display: flex;
+  flex-wrap: wrap;
+}
+#analysis .section__content .card-header .chart-menu {
+  width: 100%;
   margin-top: 10px;
   z-index: 2;
   position: relative;
 }
-#analysis .section__content .card-content .chart-menu .chart-menu__button {
+#analysis .section__content .card-header .chart-menu .chart-menu__button {
   cursor: pointer;
   border: 2px solid var(--chart-menu-border-color);
   border-radius: 1.5rem;
@@ -698,7 +737,7 @@ body {
   padding: 3px 15px 4px;
   font-size: 15px;
 }
-#analysis .section__content .card-content .chart-menu .chart-menu__button .chart-menu__button__arrow img {
+#analysis .section__content .card-header .chart-menu .chart-menu__button .chart-menu__button__arrow img {
   width: 12px;
   height: 12px;
   margin-right: 10px;
@@ -706,10 +745,10 @@ body {
   transform: rotate(180deg);
   transition: transform 500ms;
 }
-#analysis .section__content .card-content .chart-menu .chart-menu__button .chart-menu__button__arrow img.rotate {
+#analysis .section__content .card-header .chart-menu .chart-menu__button .chart-menu__button__arrow img.rotate {
   transform: rotate(360deg);
 }
-#analysis .section__content .card-content .chart-menu .chart-menu__form {
+#analysis .section__content .card-header .chart-menu .chart-menu__form {
   display: none;
   position: absolute;
   top: 35px;
@@ -719,46 +758,46 @@ body {
   background-color: var(--card-background-color);
   height: 260px;
 }
-#analysis .section__content .card-content .chart-menu .chart-menu__form.show {
+#analysis .section__content .card-header .chart-menu .chart-menu__form.show {
   display: block;
 }
-#analysis .section__content .card-content .chart-menu .chart-menu__form form {
+#analysis .section__content .card-header .chart-menu .chart-menu__form form {
   display: flex;
   flex-direction: column;
   max-height: 225px;
   overflow: auto;
   padding: 0 16px;
 }
-#analysis .section__content .card-content .chart-menu .chart-menu__form form .form-field {
+#analysis .section__content .card-header .chart-menu .chart-menu__form form .form-field {
   display: flex;
   flex-direction: column;
   margin: 0px 5px;
 }
-#analysis .section__content .card-content .chart-menu .chart-menu__form form .form-field label {
+#analysis .section__content .card-header .chart-menu .chart-menu__form form .form-field label {
   font-size: 14px;
   font-weight: bold;
   margin: 12px 0 4px;
   line-height: 2rem;
 }
-#analysis .section__content .card-content .chart-menu .chart-menu__form form .form-field .radio-option {
+#analysis .section__content .card-header .chart-menu .chart-menu__form form .form-field .radio-option {
   margin-bottom: 8px;
   font-size: 15px;
   cursor: pointer;
 }
-#analysis .section__content .card-content .chart-menu .chart-menu__form form .form-field .radio-option input {
+#analysis .section__content .card-header .chart-menu .chart-menu__form form .form-field .radio-option input {
   cursor: pointer;
 }
-#analysis .section__content .card-content .chart-menu .chart-menu__form form .form-field:last-child {
+#analysis .section__content .card-header .chart-menu .chart-menu__form form .form-field:last-child {
   padding-bottom: 30px;
 }
-#analysis .section__content .card-content .chart-menu .chart-menu__form-buttons {
+#analysis .section__content .card-header .chart-menu .chart-menu__form-buttons {
   position: absolute;
   bottom: 0;
   display: flex;
   justify-content: center;
   width: 100%;
 }
-#analysis .section__content .card-content .chart-menu .chart-menu__form-buttons .form-button {
+#analysis .section__content .card-header .chart-menu .chart-menu__form-buttons .form-button {
   flex-grow: 1;
   color: var(--card-text-color);
   background: var(--chart-menu-button-background-color);
@@ -768,9 +807,16 @@ body {
   height: 32px;
   cursor: pointer;
 }
-#analysis .section__content .card-content .chart-menu .chart-menu__form-buttons .form-button:first-child {
+#analysis .section__content .card-header .chart-menu .chart-menu__form-buttons .form-button:first-child {
   border-radius: 0 0 0.5rem 0;
 }
-#analysis .section__content .card-content .chart-menu .chart-menu__form-buttons .form-button:last-child {
+#analysis .section__content .card-header .chart-menu .chart-menu__form-buttons .form-button:last-child {
   border-radius: 0 0 0 0.5rem;
+}
+#analysis .section__content .card-content {
+  flex-grow: 1;
+}
+#analysis .section__content .card-content .chart {
+  width: 100%;
+  height: 100%;
 }
