--- a/scss/base/sections/_section-analysis.scss
+++ b/scss/base/sections/_section-analysis.scss
@@ -13,16 +13,21 @@
             flex-basis: 0;
             min-width: 200px;
         }
-        @media (max-width:770px){
+        @media (max-width:800px){
             flex-direction: column;
+            .card{
+                width:100%;
+            }
         }
     }
 
     //Card Header Settings
-
-    //Card Content Settings
-    .card-content{
+    .card-header{
+        display: flex;
+        flex-wrap: wrap;
+        // padding: 16px 16px 0;
         .chart-menu{
+            width:100%;
             margin-top: 10px;
             z-index: 2;
             position: relative;
@@ -118,5 +123,14 @@
                 }
             }
         }
+    }
+    //Card Content Settings
+    .card-content{
+        flex-grow: 1;
+        .chart{
+            width:100%;
+            height:100%
+        }
+        
     }
 }
