--- a/templates/partials/_overviewSection.hbs
+++ b/templates/partials/_overviewSection.hbs
@@ -66,7 +66,18 @@
                 </div>
             </div>
             <div class="card-content">
-
+                <div class="vaccination-data-item">
+                    <span class="vaccination-data-item__title">מנה 1</span>
+                    <span class="vaccination-data-item__data" id="first-vaccine"></span>
+                </div>
+                <div class="vaccination-data-item">
+                    <span class="vaccination-data-item__title">מנה 2</span>
+                    <span class="vaccination-data-item__data" id="second-vaccine"></span>
+                </div>
+                <div class="vaccination-data-item">
+                    <span class="vaccination-data-item__title">מנה 3</span>
+                    <span class="vaccination-data-item__data" id="third-vaccine"></span>
+                </div>
             </div>
         </div>
     </div>
