--- a/templates/partials/_scripts.hbs
+++ b/templates/partials/_scripts.hbs
@@ -12,3 +12,10 @@
 <script src="/public/js/_charts_Analysis_SeverlyIll.js"></script>
 <script src="/public/js/_charts_Analysis_DailyConfirmed.js"></script>
 <script src="/public/js/_charts_Analysis_ChartsHandler.js"></script>
+
+    {{!-- overview --}}
+<script src="/public/js/overview.js"></script>
+
+    {{!-- Load Command --}}
+<script src="/public/js/loadData.js"></script>
+
