--- a/scss/base/sections/_section-overview.scss
+++ b/scss/base/sections/_section-overview.scss
@@ -47,3 +47,14 @@
         }    
     }
 }
+
+#overview .card-content{
+    //general card-content rules
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    
+    //vaccination rules
+    
+}
